correction du tests d'ajout d'équipement
bug erreur sur le nom de variable renvoyé